--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Braxton - Personal Portfolio & Resume HTML Template</title>
+<title>Zahidul Islam — Founder of Inoviq Studio</title>
 
-    <!-- Meta Tags -->
-    <meta name="description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
-    <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
-    <meta name="author" content="mix_design">
+<!-- Meta Tags -->
+<meta name="description" content="Zahidul Islam, Founder of Inoviq Studio. Web Development, Graphic Design, Google & Meta Ads Specialist helping businesses grow with conversion-focused digital solutions.">
 
-    <!-- Viewport Meta-->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="keywords" content="Zahidul Islam, Inoviq Studio, Web Development, Graphic Design, Google Ads, Meta Ads, Facebook Ads, Digital Marketing, Freelancer Bangladesh, Portfolio">
 
-    <!-- Template Favicon & Icons Start -->
-    <link rel="icon" href="img/favicon/favicon.ico" sizes="any">
-    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
-    <link rel="manifest" href="img/favicon/manifest.webmanifest">
-    <!-- Template Favicon & Icons End -->
+<meta name="author" content="Zahidul Islam">
 
-    <!-- Facebook Metadata Start -->
-    <meta property="og:image:height" content="1200">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Braxton - Personal Portfolio & Resume HTML Template">
-    <meta property="og:description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
-    <meta property="og:url" content="https://mixdesign.club/themeforest/braxton">
-    <meta property="og:image" content="https://mixdesign.club/themeforest/braxton/img/favicon/og-image.jpg">
-    <!-- Facebook Metadata End -->
+
+    <!-- Viewport Meta -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<!-- Favicon & Icons -->
+<link rel="icon" href="img/favicon/favicon.ico" sizes="any">
+<link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+<link rel="manifest" href="img/favicon/manifest.webmanifest">
+
+<!-- Open Graph / Facebook / WhatsApp Metadata -->
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Zahidul Islam | Inoviq Studio">
+<meta property="og:title" content="Zahidul Islam — Founder of Inoviq Studio">
+<meta property="og:description" content="Zahidul Islam, Founder of Inoviq Studio. Web Development, Graphic Design, Google & Meta Ads Specialist helping businesses grow with conversion-focused digital solutions.">
+<meta property="og:url" content="https://zahidul.pro.bd/">
+<meta property="og:image" content="https://zahidul.pro.bd/img/og-image.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+
 
     <!-- Template Styles Start -->
     <link rel="stylesheet" href="css/loaders/loader.css">
@@ -155,7 +160,7 @@
               </svg>
             </div>
             <div class="logo__caption">
-              <p>Alex<br>Walker</p>
+              <p>Zahidul<br>Islam</p>
             </div>
           </div>
           <div class="avatar__image">
@@ -166,14 +171,14 @@
         <div class="avatar__block">
           <h6>
             <small class="top">Specialization:</small>
-            UI/UX designer<br>and frontend developer
+            Web, Design Design<br>Google & Meta Ads
           </h6>
         </div>
         <!-- data caption #2 -->
         <div class="avatar__block">
           <h6>
             <small class="top">Based in:</small>
-            Odesa, Ukraine
+            Barishal, Bangladesh
           </h6>
         </div>
         <!-- socials and CTA button -->
@@ -214,29 +219,41 @@
         <!-- Intro Section Start -->
         <section id="home" class="main intro">
 
-          <!-- Headline Start -->
-          <div id="headline" class="headline d-flex align-items-start flex-column" data-speed="1">
-            <p class="headline__subtitle animate-headline">
-              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="13px" height="13px" viewBox="0 0 13 13" fill="currentColor">
-                <path fill="currentColor" d="M5.6,12.6c-0.5-0.8-0.7-2.4-1.7-3.5c-1-1-2.7-1.2-3.5-1.7C-0.1,7-0.1,6,0.4,5.6c0.8-0.5,2.3-0.6,3.5-1.8
-                  C5,2.8,5.1,1.2,5.6,0.4C6-0.1,7-0.1,7.4,0.4c0.5,0.8,0.7,2.4,1.8,3.5c1.2,1.2,2.6,1.2,3.5,1.7c0.6,0.4,0.6,1.4,0,1.7
-                  C11.8,7.9,10.2,8,9.1,9.1c-1,1-1.2,2.7-1.7,3.5C7,13.1,6,13.1,5.6,12.6z"/>
-              </svg>
-              <span>Let's meet!</span>
-            </p>
-            <h1 class="headline__title animate-headline">I'm Alex Walker<br>Digital designer and illustrator.</h1>
-            <div class="headline__btnholder d-flex flex-column flex-sm-row">
-              <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent-mobile animate-headline" href="#portfolio">
-                <span class="btn-caption">My Works</span>
-                <i class="ph-bold ph-squares-four"></i>
-              </a>
-              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="#0">
-                <span class="btn-caption">Download CV</span>
-                <i class="ph-bold ph-download-simple"></i>
-              </a>
-            </div>
-          </div>
-          <!-- Headline End -->
+ <!-- Headline Start -->
+<div id="headline" class="headline d-flex align-items-start flex-column" data-speed="1">
+
+  <!-- Small subtitle above headline -->
+  <p class="headline__subtitle animate-headline">
+    <svg xmlns="http://www.w3.org/2000/svg" width="13px" height="13px" viewBox="0 0 13 13" fill="currentColor">
+      <path d="M5.6,12.6c-0.5-0.8-0.7-2.4-1.7-3.5c-1-1-2.7-1.2-3.5-1.7C-0.1,7-0.1,6,0.4,5.6c0.8-0.5,2.3-0.6,3.5-1.8
+      C5,2.8,5.1,1.2,5.6,0.4C6-0.1,7-0.1,7.4,0.4c0.5,0.8,0.7,2.4,1.8,3.5c1.2,1.2,2.6,1.2,3.5,1.7c0.6,0.4,0.6,1.4,0,1.7
+      C11.8,7.9,10.2,8,9.1,9.1c-1,1-1.2,2.7-1.7,3.5C7,13.1,6,13.1,5.6,12.6z"/>
+    </svg>
+    <span>Let’s work together</span>
+  </p>
+
+  <!-- Main headline -->
+  <h1 class="headline__title animate-headline">
+    I'm Zahidul Islam<br>
+    Founder of Inoviq Studio
+  </h1>
+
+  <!-- Action buttons -->
+  <div class="headline__btnholder d-flex flex-column flex-sm-row">
+    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent-mobile animate-headline" href="#portfolio">
+      <span class="btn-caption">My Work</span>
+      <i class="ph-bold ph-squares-four"></i>
+    </a>
+
+    <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline"
+       href="img/Zahidul-Islam-CV.pdf" target="_blank">
+      <span class="btn-caption">Download CV</span>
+      <i class="ph-bold ph-download-simple"></i>
+    </a>
+  </div>
+
+</div>
+<!-- Headline End -->
 
           <!-- Scroll Button Start -->
           <div class="rotating-btn">
@@ -446,25 +463,25 @@
                   <div class="about-info__item animate-in-up">
                     <h6>
                       <small class="top">Name</small>
-                      Alex Walker
+                      Zahidul Islam
                     </h6>
                   </div>
                   <div class="about-info__item animate-in-up">
                     <h6>
                       <small class="top">Phone</small>
-                      <a class="text-link-bold" href="tel:+12127089400">+1 212-708-9400</a>
+                      <a class="text-link-bold" href="tel:+8801911184235">+1 212-708-9400</a>
                     </h6>
                   </div>
                   <div class="about-info__item animate-in-up">
                     <h6>
                       <small class="top">Email</small>
-                      <a class="text-link-bold" href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@yourdomain.com</a>
+                      <a class="text-link-bold" href="mailto:zahidul.islam.bsl@gmail.com?subject=Message%20from%20your%20site">zahidul.islam.bsl@gmail.com</a>
                     </h6>
                   </div>
                   <div class="about-info__item animate-in-up">
                     <h6>
                       <small class="top">Location</small>
-                      <a class="text-link-bold" href="https://maps.app.goo.gl/xMJXTEUeHkv6kYRQ6" target="_blank">Odesa, Ukraine</a>
+                      <a class="text-link-bold" href="https://maps.app.goo.gl/xMJXTEUeHkv6kYRQ6" target="_blank">Barishal, Bangladesh</a>
                     </h6>
                   </div>
                 </div>
