--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Favicon & Icons -->
 <link rel="icon" href="img/favicon/fav-icon.webp" sizes="any">
 <link rel="icon" href="img/favicon/fav-icon.webp" type="image/svg+xml">
-<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+<link rel="apple-touch-icon" href="img/favicon/fav-icon.webp">
 <link rel="manifest" href="img/favicon/manifest.webmanifest">
 
 <!-- Open Graph / Facebook / WhatsApp Metadata -->
@@ -1393,3 +1393,4 @@
   </body>
 
 </html>
+
