--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-<title>Zahidul Islam | Web, UI/UX & Ads Specialist</title>
+<title>Zahidul Islam | Web Dev, UI/UX & Ads Specialist</title>
 
 <!-- Meta Tags -->
-<meta name="description" content="Zahidul Islam, Founder of INOVIQ Studio. Web Development, Graphic Design, Google & Meta Ads Specialist helping businesses grow with conversion-focused digital solutions.">
+<meta name="description" content="Zahidul Islam, Founder Of Inoviq Studio. Specializing In Web Development, Graphic Design, And Google & Meta Ads To Help Businesses Grow With Data-driven Digital Solutions.">
 
 <meta name="keywords" content="Zahidul Islam, INOVIQ Studio, Web Development, Graphic Design, Google Ads, Meta Ads, Facebook Ads, Digital Marketing, Freelancer Bangladesh, Portfolio">
 
@@ -28,8 +28,8 @@
 <!-- Open Graph / Facebook / WhatsApp Metadata -->
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Zahidul Islam | INOVIQ Studio">
-<meta property="og:title" content="Zahidul Islam — Founder of INOVIQ Studio">
-<meta property="og:description" content="Zahidul Islam, Founder of INOVIQ Studio. Web Development, Graphic Design, Google & Meta Ads Specialist helping businesses grow with conversion-focused digital solutions.">
+<meta property="og:title" content="Zahidul Islam - Founder of INOVIQ Studio">
+<meta property="og:description" content="Zahidul Islam, Founder Of Inoviq Studio. Specializing In Web Development, Graphic Design, And Google & Meta Ads To Help Businesses Grow With Data-driven Digital Solutions.">
 <meta property="og:url" content="https://zahidul.pro.bd/">
 <meta property="og:image" content="https://zahidul.pro.bd/img/og-image.jpg">
 <meta property="og:image:width" content="1200">
@@ -1393,4 +1393,5 @@
   </body>
 
 </html>
+
 
