--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
             <div class="row gx-0 my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
 
               <!-- Project 1 : Web Development -->
-              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia"
-                itemscope itemtype="http://schema.org/ImageObject">
+              <figure class="portfolio-item col-12 col-sm-6 col-lg-4 gallery__item grid-item animate-card-2"
+                itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="img/edit/p-web.webp" data-image="img/edit/p-web.webp" class="gallery__link"
                   itemprop="contentUrl" data-size="1400x1400">
                   <img src="img/edit/p-web.webp" class="gallery__image" itemprop="thumbnail"
@@ -381,8 +381,8 @@
               </figure>
 
               <!-- Project 2 : UI/UX Design -->
-              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia"
-                itemscope itemtype="http://schema.org/ImageObject">
+              <figure class="portfolio-item col-12 col-sm-6 col-lg-4 gallery__item grid-item animate-card-2"
+                itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="img/edit/p-ui.webp" data-image="img/edit/p-ui.webp" class="gallery__link" itemprop="contentUrl"
                   data-size="1400x1400">
                   <img src="img/edit/p-ui.webp" class="gallery__image" itemprop="thumbnail"
@@ -401,8 +401,8 @@
               </figure>
 
               <!-- Project 3 : Google Ads -->
-              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia"
-                itemscope itemtype="http://schema.org/ImageObject">
+              <figure class="portfolio-item col-12 col-sm-6 col-lg-4 gallery__item grid-item animate-card-2"
+                itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="img/edit/p-google.webp" data-image="img/edit/p-google.webp" class="gallery__link"
                   itemprop="contentUrl" data-size="1400x1400">
                   <img src="img/edit/p-google.webp" class="gallery__image" itemprop="thumbnail"
@@ -421,8 +421,8 @@
               </figure>
 
               <!-- Project 4 : Meta Ads -->
-              <figure class="col-12 col-md-6 gallery__item grid-item animate-card-2" itemprop="associatedMedia"
-                itemscope itemtype="http://schema.org/ImageObject">
+              <figure class="portfolio-item col-12 col-sm-6 col-lg-4 gallery__item grid-item animate-card-2"
+                itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                 <a href="img/edit/p-ads.webp" data-image="img/edit/p-ads.webp" class="gallery__link"
                   itemprop="contentUrl" data-size="1400x1400">
                   <img src="img/edit/p-ads.webp" class="gallery__image" itemprop="thumbnail"
@@ -440,6 +440,49 @@
                 </figcaption>
               </figure>
 
+              <!-- Project 5 : Google Ads -->
+              <figure class="portfolio-item col-12 col-sm-6 col-lg-4 gallery__item grid-item animate-card-2"
+                itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                <a href="img/edit/p-google.webp" data-image="img/edit/p-google.webp" class="gallery__link"
+                  itemprop="contentUrl" data-size="1400x1400">
+                  <img src="img/edit/p-google.webp" class="gallery__image" itemprop="thumbnail"
+                    alt="Google Ads & Performance Max">
+                </a>
+                <figcaption class="gallery__descr opposite" itemprop="caption description">
+                  <h5 class="opposite">Google Ads Campaign Setup</h5>
+                  <div class="card__tags d-flex flex-wrap">
+                    <span class="rounded-tag">Google Ads</span>
+                    <span class="rounded-tag">Performance Maxg</span>
+                  </div>
+                  <p class="small">
+                    High-performing Google Ads and Performance Max campaigns designed to scale results through smart
+                    bidding,
+                    audience signals, and data-driven optimization.
+                  </p>
+                </figcaption>
+              </figure>
+
+
+              <!-- Project 6 : Facebook Ads & Pixel Setup -->
+              <figure class="portfolio-item col-12 col-sm-6 col-lg-4 gallery__item grid-item animate-card-2"
+                itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                <a href="img/edit/p-ads.webp" data-image="img/edit/p-ads.webp" class="gallery__link"
+                  itemprop="contentUrl" data-size="1400x1400">
+                  <img src="img/edit/p-ads.webp" class="gallery__image" itemprop="thumbnail"
+                    alt="Facebook Ads campaign with Meta Pixel and conversion tracking">
+                </a>
+                <figcaption class="gallery__descr" itemprop="caption description">
+                  <h5>Facebook Ads & Pixel Setup</h5>
+                  <div class="card__tags d-flex flex-wrap">
+                    <span class="rounded-tag opposite">Facebook Ads</span>
+                    <span class="rounded-tag opposite">Meta Pixel</span>
+                  </div>
+                  <p class="small">
+                    Conversion-focused Facebook ad campaigns supported by accurate Pixel and event tracking to improve
+                    attribution, retargeting, and overall ROAS.
+                  </p>
+                </figcaption>
+              </figure>
 
 
             </div>
