--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
 <head>
   <meta charset="UTF-8">
 
+  <meta name="google-site-verification" content="5NZn01Umd5PDLElo7OiG4NqX5ctwJooDeozzrPy6Af0" />
+  
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NSQ4VWRW');</script>
+<!-- End Google Tag Manager -->
+
+
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5T3TKTQR1F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-5T3TKTQR1F');
+</script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5T3TKTQR1F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5T3TKTQR1F');
+</script>
+
   <link rel="canonical" href="https://zahidul.pro.bd/">
   <meta name="robots" content="index, follow">
 
@@ -1493,7 +1523,12 @@
   </script>
   <!-- Load Scripts End -->
 
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSQ4VWRW"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 </body>
 
 </html>
+
